# reNFSU2

./: .env.example  .gitignore  LICENSE  README.md  cross_mingw.ini  functions.json  meson.build  test.py
src/: main.cpp  test.cpp
src/core/app/: bootstrap.cpp  bootstrap.hpp  cmdline.cpp  cmdline.hpp  lifecycle.cpp  lifecycle.hpp
src/core/entry/: main.cpp  winmain.cpp
src/core/hook/: hook.hpp  macro.hpp  offsets.h
src/core/memory/: pool.cpp  pool.hpp  refs.hpp
src/core/system/: process_guard.cpp  process_guard.hpp
src/core/time/: timer.cpp  timer.hpp
src/core/utils/: logger.cpp  logger.hpp
tools/: export_functions.py  run.py  update_progress.py
